# cppquake

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  bspfile.h  bspfile.hpp  cd_sdl.cpp  chase.cpp  cl_demo.cpp  cl_input.cpp  cl_main.cpp  cl_parse.cpp  cl_tent.cpp  client.hpp  cmd.c  cmd.cpp  cmd.hpp  common.c  common.cpp  common.h  common.hpp  config.cache  config.status  configure  configure.in  console.c  console.cpp  console.hpp  crc.cpp  cvar.cpp  cvar.hpp  d_copy.S  d_copy.cpp  d_copy.hpp  d_draw.S  d_draw16.S  (+122 more)
.deps/: cd_sdl.Po  chase.Po  cl_demo.Po  cl_input.Po  cl_main.Po  cl_parse.Po  cl_tent.Po  cmd.Po  common.Po  console.Po  crc.Po  cvar.Po  d_copy.Po  d_draw.Po  d_draw16.Po  d_edge.Po  d_fill.Po  d_init.Po  d_modech.Po  d_part.Po  d_parta.Po  d_polysa.Po  d_polyse.Po  d_scan.Po  d_scana.Po  d_sky.Po  d_spr8.Po  d_sprite.Po  d_surf.Po  d_vars.Po  d_varsa.Po  d_zpoint.Po  dosasm.Po  draw.Po  host.Po  host_cmd.Po  keys.Po  math.Po  mathlib.Po  menu.Po  (+52 more)
src/: adivtab.hpp  anorm_dots.hpp  anorms.hpp  asm_draw.hpp  asm_i386.hpp  block16.hpp  block8.hpp  bspfile.hpp  cd_sdl.cpp  cdaudio.hpp  chase.cpp  cl_demo.cpp  cl_input.cpp  cl_main.cpp  cl_parse.cpp  cl_tent.cpp  client.hpp  cmd.cpp  cmd.hpp  common.cpp  common.hpp  conproc.hpp  console.cpp  console.hpp  crc.cpp  crc.hpp  cvar.cpp  cvar.hpp  d_edge.cpp  d_fill.cpp  d_iface.hpp  d_ifacea.hpp  d_init.cpp  d_local.hpp  d_modech.cpp  d_part.cpp  d_polyse.cpp  d_scan.cpp  d_sky.cpp  d_sprite.cpp  (+89 more)
